adding QLM scripts

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-qiskit_ibm_runtime
-pandas~=1.3.5
-numpy~=1.21.6
-sklearn~=0.0.post1
-plotly~=5.4.0
-fastdist~=1.1.4
-scikit-learn~=1.2.1
-scipy~=1.9.3
-qiskit~=0.44.1
-qiskit-ibmq-provider
-qiskit-ionq
-tqdm~=4.64.1
-matplotlib~=3.6.2
-pylatexenc
+numpy
+sklearn
+plotly
+fastdist
+scikit-learn
+scipy
+qiskit
+tqdm
+matplotlib
+qat
